Adding the GUI elements